--- a/journal.Rmd
+++ b/journal.Rmd
@@ -20,16 +20,19 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 # Challenge 1
 
+## Challenge 1.1
+
 Code for the first Challenge, sales by state are given below.
 
-## Loading libraries
+### Loading libraries
 
 ```{r}
 library(tidyverse)
 library(readxl)
+library(lubridate)
 ```
 
-## Importing Excel data
+### Importing Excel data
 
 ```{r}
 bikes_c1_tbl <- read_excel(path = "00_data/01_bike_sales/01_raw_data/bikes.xlsx")
@@ -37,7 +40,7 @@ orderlines_c1_tbl <- read_excel(path = "00_data/01_bike_sales/01_raw_data/orderl
 bikeshops_c1_tbl  <- read_excel(path = "00_data/01_bike_sales/01_raw_data/bikeshops.xlsx")
 ```
 
-## Joining data
+### Joining data
 
 ```{r}
 left_join(orderlines_c1_tbl, bikes_c1_tbl, by = c("product.id" = "bike.id"))
@@ -48,7 +51,7 @@ bike_orderlines_joined_c1_tbl <- orderlines_c1_tbl %>%
   left_join(bikeshops_c1_tbl, by = c("customer.id" = "bikeshop.id"))
 ```
 
-## Wrangling data
+### Wrangling data
 
 Create new data in which you wrangle combined data:
 
@@ -67,7 +70,7 @@ bike_orderlines_wrangled_c1_tbl <- bike_orderlines_joined_c1_tbl %>%
   select(-...1, -gender, -url, -lat, -lng, -frame.material, -weight)
 ```
 
-## Take out needed data
+### Take out needed data
 
 ```{r}
 sales_by_state_c1_tbl <- bike_orderlines_wrangled_c1_tbl %>%
@@ -80,7 +83,7 @@ sales_by_state_c1_tbl <- bike_orderlines_wrangled_c1_tbl %>%
                                      suffix = " €")) #turn the numbers to money format
 ```
 
-## Plot the graph
+### Plot the graph
 
 ```{r plot, fig.width=10, fig.height=7}
 sales_by_state_c1_tbl %>%
@@ -95,6 +98,54 @@ sales_by_state_c1_tbl %>%
                                                     suffix = " €")) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) #rotate the x-axis label
 ```
+
+
+
+
+
+## Challenge 1.2
+
+We will continue building on the previous code, so some steps are not needed to be repeated again.
+
+### Manipulate data for new graph
+
+```{r}
+sales_by_state_and_year_c1_tbl <- bike_orderlines_wrangled_c1_tbl %>% #create new data for visualization
+  select(order.date, total.price, state) %>% #take out needed column from for the new data
+  mutate(year = year(order.date)) %>% #add a year column using lubridate
+  group_by(year, state) %>%
+  summarise(sales = sum(total.price)) %>%
+  ungroup() %>%
+  
+  mutate(sales_text = scales::dollar(sales, big.mark = ".", 
+                                     decimal.mark = ",", 
+                                     prefix = "", 
+                                     suffix = " €")) #formatting the money
+```
+
+### Visualizing the data
+
+```{r plot, fig.width=10, fig.height=7}
+
+sales_by_state_and_year_c1_tbl %>%
+  ggplot(aes(x = year, y = sales, fill = state))+ #create the plot
+  geom_col() +  #define plot type
+  facet_wrap(~ state)+  #to form a different plot for each state
+  scale_y_continuous(labels = scales::dollar_format(big.mark = ".", 
+                                                  decimal.mark = ",", 
+                                                  prefix = "", 
+                                                  suffix = " €"))+ #formatting
+  theme(axis.text.x = element_text(angle = 70, hjust = 1)) #rotate the x-axis label
+```
+
+
+
+
+
+
+
+
+
 
 
 
