--- a/journal.Rmd
+++ b/journal.Rmd
@@ -210,10 +210,9 @@ Playlist
 ## Challenge 4
 
 
-
-### Load the libraries
-
 ```{r}
+#1 Loading libraries
+  
 library(tidyverse) # Main Package - Loads dplyr, purrr, etc.
 library(rvest)     # HTML Hacking & Web Scraping
 library(xopen)     # Quickly opening URLs
@@ -221,68 +220,59 @@ library(jsonlite)  # converts JSON files to R objects
 library(glue)      # concatenate strings
 library(stringi)   # character string/text processing
 library(RSQLite)   # working with databases
-```
 
-### Open website
+# 2. Open category page 
 
-Arbitrarily chosen E-bike family, Mountainbike category
+# Arbitrarily chosen E-bike family, Mountainbike category
 
-```{r}
 url_homepage <- "https://www.radon-bikes.de/e-bike/mountainbike/bikegrid/"
 #xopen(url_homepage)
 html_homepage <- read_html(url_homepage)
-```
 
 
-### Scrape the website 
+# 3. Scrape website
 
-Scraping product ID's and prices
-```{r}
 #Extract the product ID names
 product_id_tbl <- html_homepage %>%
   html_nodes(css = ".m-bikegrid__info .a-heading--small") %>%
   html_text() %>%
-  trimws("both") %>% #deleting empty space
+  trimws("both") %>% # erase empty space
   enframe(name = "position", value = "product_id") #vector to tibble
 
 #Extract the product prices
 product_prices_tbl <- html_homepage %>%
   html_nodes(css = ".currency_eur> .m-bikegrid__price--active") %>%
-  html_text("span") %>% #extract attribute span
+  html_text("span") %>% # extract span attribute
   enframe(name = "position", value = "product_prices") #vector to tibble
 
 #Bind two columns
 mountainbike_list_tbl <- product_id_tbl %>%
   bind_cols(product_prices_tbl %>% select("product_prices"))
-```
 
-### Create database
+# 4. Creating database
 
-```{r}
-# Forming database
+# Create database
 con <- RSQLite::dbConnect(drv    = SQLite(), 
                            dbname = "data-science/00_data/Mountain_bikes.sqlite")
-
-# Adding tables to database
+# Add tables to database
 dbWriteTable(con, "product_id", product_id_tbl, overwrite=TRUE)
 dbWriteTable(con, "product_prices", product_prices_tbl, overwrite=TRUE)
-```
 
-### Call database
-```{r}
+# 5. Call database
+
 # Return the name of tables
 dbListTables(con)
 
-# List any table needed
+# Return any data you need
 tbl(con, "product_id")
+
 tbl(con, "product_prices")
 
-# Disconnect after use
+
+# Disconnect from database after use
 dbDisconnect(con)
 con
 ```
-
-
 
 
 
